--- a/app/template.html
+++ b/app/template.html
@@ -1,4 +1,12 @@
 <main role="main">
-	<h1>Song List</h1>
-	<song-table v-bind:songs="songs"></song-table>
+	<nav class="navbar navbar-expand-xl navbar-dark bg-dark">
+		<a class="navbar-brand" href="/">Song Manager</a>
+	</nav>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="colum-xl-12">
+				<song-table v-bind:songs="songs"></song-table>
+			</div>
+		</div>
+	</div>
 </main>
