--- a/app/main-view/song-table/song-row/template.html
+++ b/app/main-view/song-table/song-row/template.html
@@ -2,6 +2,6 @@
 	<td>{{song.name}}</td>
 	<td>{{song.artist}}</td>
 	<td>{{song.album}}</td>
-	<td>{{song.length}}</td>
 	<td>{{song.genre}}</td>
+	<td>{{song.minutes}}:{{song.seconds}}</td>
 </tr>
