--- a/app/main-view/song-table/template.html
+++ b/app/main-view/song-table/template.html
@@ -1,5 +1,5 @@
-<table class="table">
-	<thead>
+<table class="table table-responsive ml-3 mt-3">
+	<thead class="thead-dark">
 		<tr>
 			<th></th>
 			<th>Song</th>
