--- a/app/main-view/template.html
+++ b/app/main-view/template.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="colum-xl-12">
-			<song-table v-bind:songs="songs.data"></song-table>
+			<song-table></song-table>
 		</div>
 	</div>
 </div>
