--- a/app/main-view/song-table/song-row/template.html
+++ b/app/main-view/song-table/song-row/template.html
@@ -1,5 +1,5 @@
 <tr v-if="beingEdited" v-on:keyup.enter="update" v-on:keyup.esc="cancel">
-	<td>{{index + 1}}
+	<td>{{index + 1}}</td>
 	<td class="song-name"><input class="form-control" type="text" v-model="localSong.name"/></td>
 	<td class="song-artist"><input class="form-control" type="text" v-model="localSong.artist"/></td>
 	<td class="song-album"><input class="form-control" type="text" v-model="localSong.album"/></td>
@@ -13,7 +13,7 @@
 	</td>
 </tr>
 <tr v-else>
-	<td>{{index + 1}}
+	<td>{{index + 1}}</td>
 	<td class="song-name">{{song.name}}</td>
 	<td class="song-artist">{{song.artist}}</td>
 	<td class="song-album">{{song.album}}</td>
