--- a/app/main-view/song-table/song-row/template.html
+++ b/app/main-view/song-table/song-row/template.html
@@ -8,8 +8,11 @@
 		<input class="len-input form-control" type="text" v-model="localSong.minutes"/>:<input class="len-input form-control" type="text" v-model="localSong.seconds"/>
 	</td>
 	<td>
-		<button class="btn btn-default" type="button" v-on:click="update">update</button>
-		<button class="btn btn-default" type="button" v-on:click="cancel">cancel</button>
+		<div class="btn-group">
+			<button class="btn btn-primary" type="button" v-on:click="update">update</button>
+			<button class="btn btn-danger" type="button" v-on:click="delSong">delete</button>
+			<button class="btn btn-default" type="button" v-on:click="cancel">cancel</button>
+		</div>
 	</td>
 </tr>
 <tr v-else>
@@ -19,5 +22,5 @@
 	<td class="song-album">{{song.album}}</td>
 	<td class="song-genre">{{song.genre}}</td>
 	<td class="song-length">{{song.minutes}}:{{song.seconds}}</td>
-	<td><button class="btn btn-default" type="button" v-on:click="edit">edit</button></td>
+	<td><button class="btn btn-warning" type="button" v-on:click="edit">edit</button></td>
 </tr>
