--- a/app/main-view/song-table/song-row/template.html
+++ b/app/main-view/song-table/song-row/template.html
@@ -9,9 +9,9 @@
 	</td>
 	<td>
 		<div class="btn-group">
-			<button class="btn btn-primary" type="button" v-on:click="update">update</button>
-			<button class="btn btn-danger" type="button" v-on:click="delSong">delete</button>
 			<button class="btn btn-default" type="button" v-on:click="cancel">cancel</button>
+			<button class="btn btn-danger" type="button" v-on:click="delSong">delete</button>
+			<button class="btn btn-success" type="button" v-on:click="update">save</button>
 		</div>
 	</td>
 </tr>
