Added placeholder to song table search

--- a/app/main-view/song-table/template.html
+++ b/app/main-view/song-table/template.html
@@ -1,5 +1,5 @@
 <div class="ml-3 mt-3">
-	<input class="form-control mt-2 mb-2" type="text" v-model.trim="searchText"/>
+	<input class="form-control mt-2 mb-2" type="text" placeholder="search" v-model.trim="searchText"/>
 	<table class="table table-responsive">
 		<thead class="thead-dark">
 			<tr>
