--- a/app/template.html
+++ b/app/template.html
@@ -1,6 +1,20 @@
 <main role="main">
 	<nav class="navbar navbar-expand-xl navbar-dark bg-dark">
 		<router-link class="navbar-brand" to="/">Song Manager</router-link>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+	
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item">
+					<router-link class="nav-link" to="/">Songs</router-link>
+				</li>
+				<li class="nav-item">
+					<router-link class="nav-link" to="/set-lists">Set Lists</router-link>
+				</li>
+			</ul>
+		</div>
 	</nav>
 	<router-view></router-view>
 </main>
