--- a/app/nav-bar/template.html
+++ b/app/nav-bar/template.html
@@ -5,7 +5,7 @@
 	</button>
 
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
-		<ul class="navbar-nav mr-auto">
+		<ul v-if="loggedIn" class="navbar-nav mr-auto">
 			<li class="nav-item">
 				<router-link class="nav-link" to="/">Songs</router-link>
 			</li>
@@ -13,5 +13,6 @@
 				<router-link class="nav-link" to="/set-lists">Set Lists</router-link>
 			</li>
 		</ul>
+		<button v-if="loggedIn" class="btn btn-outline-light" type="button">Logout</button>
 	</div>
 </nav>
