--- a/app/nav-bar/template.html
+++ b/app/nav-bar/template.html
@@ -13,6 +13,6 @@
 				<router-link class="nav-link" to="/set-lists">Set Lists</router-link>
 			</li>
 		</ul>
-		<button v-if="loggedIn" class="btn btn-outline-light" type="button">Logout</button>
+		<button v-if="loggedIn" v-on:click="logout" class="btn btn-outline-secondary" type="button">Logout</button>
 	</div>
 </nav>
