--- a/app/pages/main-view/template.html
+++ b/app/pages/main-view/template.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
 	<div class="row">
 		<div class="colum-xl-12">
 			<song-table></song-table>
