--- a/app/song-table/template.html
+++ b/app/song-table/template.html
@@ -1,6 +1,5 @@
 <div class="ml-3 mt-3">
-	<input class="form-control mt-2 mb-2" type="text" placeholder="search" v-model.trim="searchText"/>
-	<table class="table table-responsive">
+	<table class="table">
 		<thead class="thead-dark">
 			<tr>
 				<th></th>
