--- a/app/pages/login-view/template.html
+++ b/app/pages/login-view/template.html
@@ -1,4 +1,5 @@
 <div class="container">
+
 	<div class="row mt-5">
 		<div class="col-xl-6 offset-xl-3">
 			<div class="card">
@@ -18,11 +19,40 @@
 						<input class="btn btn-primary" type="submit" name="login" id="login" value="Login" />
 					</form>
 					<div class="text-right">
-						<a href="#">Register</a> |
-						<a href="#">Reset Password</a>
+						<a href="#" data-toggle="modal" data-target="#register-modal">Register</a> |
+						<a class="disabled" href="#">Reset Password</a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+
+	<div id="register-modal" class="modal fade">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5>Register</h5>
+					<button type="button" class="close" data-dismiss="modal">
+						<span>&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<form>
+						<div class="form-group">
+							<label for="email">Email</label>
+							<input v-model="registerEmail" class="form-control" type="email" name="register-email" id="register-email" placholder="person@example.com" required/>
+						</div>
+						<div class="form-group">
+							<label for="password">Password</label>
+							<input v-model="registerPassword" class="form-control" type="password" name="register-password" id="register-password" placholder="password" required/>
+						</div>
+					</form>
+				</div>
+				<div class="modal-footer">
+					<button v-on:click="register" class="btn btn-primary" type="button">Submit</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
 </div>
