--- a/app/pages/login-view/template.html
+++ b/app/pages/login-view/template.html
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container-fluid">
 
 	<div class="row mt-5">
-		<div class="col-xl-6 offset-xl-3">
+		<div class="col-xl-4 offset-xl-4">
 			<div class="card">
 				<div class="card-header">
 					<h3>Login</h3>
