--- a/app/song-table/song-row/template.html
+++ b/app/song-table/song-row/template.html
@@ -5,7 +5,7 @@
 	<td class="song-album"><input class="form-control" type="text" v-model="localSong.album"/></td>
 	<td class="song-genre"><input class="form-control" type="text" v-model="localSong.genre"/></td>
 	<td class="song-length">
-		<input class="len-input form-control" type="text" v-model="localSong.minutes"/>:<input class="len-input form-control" type="text" v-model="localSong.seconds"/>
+		<length-input v-model="localSong.length"></length-input>
 	</td>
 	<td>
 		<div class="btn-group">
@@ -21,6 +21,6 @@
 	<td class="song-artist">{{song.artist}}</td>
 	<td class="song-album">{{song.album}}</td>
 	<td class="song-genre">{{song.genre}}</td>
-	<td class="song-length">{{song.minutes}}:{{song.seconds}}</td>
+	<td class="song-length">{{song.length | formatLength}}</td>
 	<td><button class="btn btn-warning" type="button" v-on:click="edit">edit</button></td>
 </tr>
