--- a/app/pages/main-view/template.html
+++ b/app/pages/main-view/template.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
-	<div class="row">
-		<div class="colum-xl-12">
+	<div class="row mt-3">
+		<div class="col-xl-12">
 			<song-table></song-table>
 		</div>
 	</div>
