updated page templates

--- a/app/template.html
+++ b/app/template.html
@@ -1,5 +1,7 @@
 <main role="main">
 	<nav-bar></nav-bar>
-	<router-view></router-view>
+	<div class="container-fluid">
+		<router-view></router-view>
+	</div>
 	<alert-box></alert-box>
 </main>
