--- a/src/pages/not-found-view/template.html
+++ b/src/pages/not-found-view/template.html
@@ -1,6 +1,6 @@
-<div class="row">
+<div class="row mt-5">
 	<div class="colum-xl-12">
-		<h1 class="mt-3">Page Not Found</h1>
+		<h1>Not Found</h1>
 		<p>The page you requested ws not found.</p>
 	</div>
 </div>
