--- a/src/pages/not-found-view/template.html
+++ b/src/pages/not-found-view/template.html
@@ -1,6 +1,6 @@
 <div class="row mt-5">
-	<div class="colum-xl-12">
-		<h1>Not Found</h1>
-		<p>The page you requested ws not found.</p>
+	<div class="col-xl-12">
+		<h1 class="text-center">Not Found</h1>
+		<p class="text-center">The page you requested was not found.</p>
 	</div>
 </div>
