Updated song table styling

--- a/src/pages/main-view/template.html
+++ b/src/pages/main-view/template.html
@@ -1,5 +1,5 @@
 <div class="row pt-3">
-	<div class="col-xl-12">
+	<div class="col-xl-10 offset-xl-1">
 		<song-table></song-table>
 	</div>
 </div>
