updated login form template layout

--- a/src/pages/login-view/template.html
+++ b/src/pages/login-view/template.html
@@ -1,5 +1,5 @@
-<div class="row mt-5">
-	<div class="col-xl-4 offset-xl-4">
+<div class="row mt-5 justify-content-center">
+	<div class="col-xl-3">
 
 		<div class="card">
 			<div class="card-header">
@@ -7,27 +7,29 @@
 			</div>
 			<div class="card-body">
 				<form v-on:submit.prevent="login">
-					<div class="form-group">
+					<div class="form-group pb-2">
 						<label for="email">Email</label>
 						<input v-model="email" class="form-control" type="email" name="email" id="email" value="" placholder="person@example.com" required/>
 					</div>
-					<div class="form-group">
-						<label for="password">Password</label>
+					<div class="form-group pb-2">
+						<div class="d-flex justify-content-between">
+							<label for="password">Password</label>
+							<small><a class="disabled" href="#">Forgot Password?</a></small>
+						</div>
 						<input v-model="password" class="form-control" type="password" name="password" id="password" value="" placholder="password" required/>
 					</div>
-					<input class="btn btn-primary" type="submit" name="login" id="login" value="Login" />
+					<input class="btn btn-primary w-100 my-3" type="submit" name="login" id="login" value="Login" />
 				</form>
-				<div class="text-right">
-					<a href="#" data-toggle="modal" data-target="#register-modal">Register</a> |
-					<a class="disabled" href="#">Reset Password</a>
-				</div>
+			</div>
+			<div class="card-footer text-center">
+					<a href="#" data-toggle="modal" data-target="#register-modal">Create Account</a>
 			</div>
 		</div>
 
 		<div id="register-modal" class="modal fade">
 			<div class="modal-dialog">
 				<div class="modal-content">
-					<div class="modal-header">
+					<div class="modal-header bg-light">
 						<h5>Register</h5>
 						<button type="button" class="close" data-dismiss="modal">
 							<span>&times;</span>
@@ -45,7 +47,8 @@
 							</div>
 						</form>
 					</div>
-					<div class="modal-footer">
+					<div class="modal-footer bg-light">
+						<button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
 						<button v-on:click="register" class="btn btn-primary" type="button">Submit</button>
 					</div>
 				</div>
